Fix production CORS errors by enabling credentials and removing conflicts
- Changed SecurityConfig.allowCredentials from false to true
- Added specific allowed origins for production domains
- Removed duplicate CORS configuration from WebConfig
- Added exposed headers for Authorization and Content-Type
- This fixes CORS errors and 500 internal server errors on deployment

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>